--- a/index.html
+++ b/index.html
@@ -22,6 +22,28 @@
             <a class="navigation-link" href="about.html">О компании</a>
           </li>
         </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item ">
+            <a class="navigation-link telephone" href="#">+7 800 555-86-28</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Вход</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link basket" href="#">
+              <span class="visually-hidden">
+                Корзина
+              </span>
+            </a>
+          </li>
+        </ul>
       </nav>
     </header>
   </body>
