--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог</a>
+            <ul class="navigation-list navigation-list-catalog">
+              <li class="navigation-item">
+                <a class="navigation-link navigation-link-new" href="new.html">Новинки</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="creamy.html">Сливочное</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="sherbets.html">Щербеты</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="fruit_ice.html">Фруктовый лед</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation-link" href="melorin.html">Мелорин</a>
+              </li>
+            </ul>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="delivery_and_payment.html">Доставка и оплата</a>
