Добавляет блок с галереей

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item ">
-            <a class="navigation-link telephone" href="#">+7 800 555-86-28</a>
+            <a class="navigation-link navigation-telephone" href="#">+7 800 555-86-28</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
@@ -54,7 +54,7 @@
             <a class="navigation-link" href="#">Вход</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link basket" href="#">
+            <a class="navigation-link navigation-basket" href="#">
               <span class="visually-hidden">
                 Корзина
               </span>
@@ -63,5 +63,78 @@
         </ul>
       </nav>
     </header>
+
+    <main class="main-index">
+      <h1 class="visually-hidden">Магазин мороженого Gllacy Shop</h1>
+      <section class="main-gallery">
+        <ul class="slider">
+          <li>
+            <h2 class="main-gallery-title">Нежный пломбир с клубничным джемом</h2>
+            <p>Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
+            <button class="button" type="submit">Заказать</button>
+          </li>
+          <li>
+            <img class="slider-image" src="#" alt="Нежный пломбир с клубничным джемом">
+            <button class="slider-button slider-prev" type="button">
+              <span class="visually-hidden">Предыдущее мороженое</span>
+            </button>
+            <button class="slider-button slider-next" type="button">
+              <span class="visually-hidden">Следующее мороженое</span>
+            </button>
+          </li>
+          <li class="slider-image-preview">
+            <a href="#">
+              <span class="visually-hidden">
+                Сливочное мороженое со вкусом банана
+              </span>
+            </a>
+          </li>
+          <li class="slider-image-preview">
+            <a href="#">
+              <span class="visually-hidden">
+                Карамельный пломбир с маршмеллоу
+              </span>
+            </a>
+          </li>
+        </ul>
+        <ol class="slider-pagination">
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button slider-pagination-button-current" type="button">
+              <span class="visually-hidden">Нежный пломбир с клубничным джемом</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden"> Сливочное мороженое со вкусом банана</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">Карамельный пломбир с маршмеллоу</span>
+            </button>
+          </li>
+        </ol>
+      </section>
+      <section class="social">
+        <h2 class="social-title">Наши соцсети</h2>
+        <ul class="social-list">
+          <li class="social-item">
+            <a class="button" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">YouTube</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
