Добавляет блок с популярными товарами и заменяет p на span

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <ul class="slider">
           <li>
             <h2 class="main-gallery-title">Нежный пломбир с клубничным джемом</h2>
-            <p>Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
+            <span class="basic-text">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</span>
             <button class="button" type="submit">Заказать</button>
           </li>
           <li>
@@ -140,13 +140,54 @@
         <ul class="gifts-list">
           <li class="gifts-item">
             <h3 class="gifts-item-title">Малинка даром!</h3>
-            <p>При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <span class="basic-text">При покупке 2 кг любого фруктового мороженого добавим в ваш заказ банку малинового варенья бесплатно.</span>
             <a class="button" href="#">Хочу подарок</a>
           </li>
           <li class="gifts-item">
             <h3 class="gifts-item-title">Маршмеллоу даром!</h3>
-            <p>При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
+            <span class="basic-text">При покупке 2 кг пломбира добавим в ваш заказ упаковку нежных зефирок совершенно бесплатно.</span>
             <a class="button" href="#">Хочу подарок</a>
+          </li>
+        </ul>
+      </section>
+      <section class="popular-product">
+        <h2 class="popular-product-title">Попробуйте самые популярные вкусы нашего мороженого</h2>
+        <ul class="popular-product-list">
+          <li>
+            <a class="product-card-link">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Малинка</h3>
+            </a>
+            <span class="basic-text">Сливочное мороженое с малиновым джемом</span>
+            <span class="product-card-price">310 ₽/кг</span>
+            <a class="product-card-button button" href="#">Купить</a>
+          </li>
+          <li>
+            <a class="product-card-link">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Фисташка</h3>
+            </a>
+            <span class="basic-text">Фисташковый пломбир с кусочками шоколада</span>
+            <span class="product-card-price">340 ₽/кг</span>
+            <a class="product-card-button button" href="#">Купить</a>
+          </li>
+          <li>
+            <a class="product-card-link">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Черника</h3>
+            </a>
+            <span class="basic-text">Крем-брюле с черничным джемом</span>
+            <span class="product-card-price">330 ₽/кг</span>
+            <a class="product-card-button button" href="#">Купить</a>
+          </li>
+          <li>
+            <a class="product-card-link">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Бабл-гам</h3>
+            </a>
+            <span class="basic-text">Ванильный пломбир со сладкой посыпкой</span>
+            <span class="product-card-price">320 ₽/кг</span>
+            <a class="product-card-button button" href="#">Купить</a>
           </li>
         </ul>
       </section>
