--- a/index.html
+++ b/index.html
@@ -191,6 +191,24 @@
           </li>
         </ul>
       </section>
+      <section class="advantages">
+        <h2 class="advantages-title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <span class="basic-text">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</span>
+          </li>
+          <li class="advantages-item">
+            <span class="basic-text">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и добавки произведены из натурального сырья.</span>
+          </li>
+          <li class="advantages-item">
+            <span class="basic-text">Закупка ингредиентов производится только у проверенных фермерских хозяйств, с которыми нас связывает долговременное сотрудничество.</span>
+          </li>
+          <li class="advantages-item">
+            <span class="basic-text">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</span>
+          </li>
+        </ul>
+      </section>
+
     </main>
   </body>
 </html>
