--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
           </li>
         </ul>
       </section>
+      <article class="advertising">
+        <span class="basic-text">Новое в нашем блоге</span>
+        <h3 class="advertising-title">10 способов сервировки фруктовых щербетов к столу</h3>
+      </article>
 
     </main>
   </body>
