Добавляет блок с подпиской
Плюс правки блока Популярные предложения (отображения кнопки)

--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
             </a>
             <span class="basic-text">Сливочное мороженое с малиновым джемом</span>
             <span class="product-card-price">310 ₽/кг</span>
-            <a class="product-card-button button" href="#">Купить</a>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+                Купить
+              </span>
+            </a>
           </li>
           <li>
             <a class="product-card-link">
@@ -169,7 +173,11 @@
             </a>
             <span class="basic-text">Фисташковый пломбир с кусочками шоколада</span>
             <span class="product-card-price">340 ₽/кг</span>
-            <a class="product-card-button button" href="#">Купить</a>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+                Купить
+              </span>
+            </a>
           </li>
           <li>
             <a class="product-card-link">
@@ -178,7 +186,10 @@
             </a>
             <span class="basic-text">Крем-брюле с черничным джемом</span>
             <span class="product-card-price">330 ₽/кг</span>
-            <a class="product-card-button button" href="#">Купить</a>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
           </li>
           <li>
             <a class="product-card-link">
@@ -187,7 +198,10 @@
             </a>
             <span class="basic-text">Ванильный пломбир со сладкой посыпкой</span>
             <span class="product-card-price">320 ₽/кг</span>
-            <a class="product-card-button button" href="#">Купить</a>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
           </li>
         </ul>
       </section>
@@ -212,6 +226,17 @@
         <span class="basic-text">Новое в нашем блоге</span>
         <h3 class="advertising-title">10 способов сервировки фруктовых щербетов к столу</h3>
       </article>
+      <section class="newsletter">
+        <h2 class="page-footer-title">Получайте лучшие предложения</h2>
+        <span class="basic-text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</span>
+        <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label for="newsletter-email">Email</label>
+          <input class="field"  placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
+          <button class="button newsletter-button" type="submit">
+            <span class="button button-pink">Отправить</span>
+          </button>
+        </form>
+      </section>
 
     </main>
   </body>
