Добавляет блок с доставкой

--- a/index.html
+++ b/index.html
@@ -237,6 +237,26 @@
           </button>
         </form>
       </section>
+      <section class="delivery">
+        <h2 class="delivery-title">Доставка любимого мороженого на дом</h2>
+        <p>Хочется полакомиться любимым десертом, но нет времени съездить в магазин? Закажите доставку мороженого на дом, и курьер привезёт вам ваш заказ в течение часа!</p>
+        <p>Укажите адрес и дату доставки, и мы свяжемся с вами, чтобы подтвердить заказ.</p>
+        <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
+          <p class="delivery-form-date">
+            <label class="form-label" for="delivery-date">Дата</label>
+            <input type="text" id="delivery-date" name="delivery-date" placeholder="01.04.2020">
+          </p>
+          <p class="delivery-form-phone">
+            <label for="delivery-phone">Телефон</label>
+            <input type="text" id="delivery-phone" name="delivery-phone" placeholder="+7 800 999-00-00">
+          </p>
+          <p class="delivery-form-address">
+            <label for="delivery-address">Адрес</label>
+            <input type="text" id="delivery-name" name="delivery-name" placeholder="ул. Большая Конюшенная, 19/8">
+          </p>
+          <button class="button button-pink" type="submit">Отправить</button>
+        </form>
+      </section>
 
     </main>
   </body>
