--- a/index.html
+++ b/index.html
@@ -274,7 +274,48 @@
         <p class="contacts-phone-time">(с 10 до 20 ежедневно)</p>
         <a class="button button-feedback" href="#">Форма обратной связи</a>
       </section>
-
+      <footer class="page-footer">
+        <section class="social">
+          <h2 class="social-title">Наши соцсети</h2>
+          <ul class="social-list">
+            <li class="social-item">
+              <a class="button" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Телеграм</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="button" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">YouTube</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer-navigation">
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link navigation-link-suppliers" href="#">Для поставщиков</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">О производстве</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Наши документы</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Экологические стандарты</a>
+            </li>
+          </ul>
+        </section>
+        <section class="htmlacademy">
+          <img class="htmlacademy-logo" src="" alt="Логотип htmlacademy">
+          <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a> &copy; 2023</p>
+        </section>
+      </footer>
     </main>
   </body>
 </html>
