--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </ol>
       </section>
       <section class="social">
-        <h2 class="social-title">Наши соцсети</h2>
+        <h2 class="visually-hidden">Наши соцсети</h2>
         <ul class="social-list">
           <li class="social-item">
             <a class="button" href="https://t.me/htmlacademy">
@@ -276,7 +276,7 @@
       </section>
       <footer class="page-footer">
         <section class="social">
-          <h2 class="social-title">Наши соцсети</h2>
+          <h2 class="visually-hidden">Наши соцсети</h2>
           <ul class="social-list">
             <li class="social-item">
               <a class="button" href="https://t.me/htmlacademy">
@@ -296,6 +296,7 @@
           </ul>
         </section>
         <section class="footer-navigation">
+          <h2 class="visually-hidden">Навигация</h2>
           <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-link navigation-link-suppliers" href="#">Для поставщиков</a>
@@ -312,6 +313,7 @@
           </ul>
         </section>
         <section class="htmlacademy">
+          <h2 class="visually-hidden">Данные о компании разрабодчике</h2>
           <img class="htmlacademy-logo" src="" alt="Логотип htmlacademy">
           <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a> &copy; 2023</p>
         </section>
