--- a/catalog.html
+++ b/catalog.html
@@ -66,7 +66,7 @@
       </nav>
     </header>
 
-    <main class="main-index">
+    <main class="main-inter"></main>
 
       <footer class="page-footer">
         <section class="social">
@@ -112,6 +112,5 @@
           <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a> &copy; 2023</p>
         </section>
       </footer>
-    </main>
   </body>
 </html>
