Добавляет «Хлебные крошки» в католог

--- a/catalog.html
+++ b/catalog.html
@@ -66,7 +66,22 @@
       </nav>
     </header>
 
-    <main class="main-inter"></main>
+    <main class="main-inter">
+      <header class="inner-header">
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="index.html">Главная</a>
+          </li>
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link" href="catalog.html">Каталог</a>
+          </li>
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link">Сливочное мороженое</a>
+          </li>
+        </ul>
+        <h1 class="inner-header-title">Сливочное мороженое</h1>
+      </header>
+    </main>
 
       <footer class="page-footer">
         <section class="social">
