Добавляет карточки товаров в каталог

--- a/catalog.html
+++ b/catalog.html
@@ -155,9 +155,156 @@
               </li>
             </ul>
           </fieldset>
-
           <button class="button" type="submit">Применить</button>
         </form>
+        <ul class="product-list">
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Малинка</h3>
+            </a>
+            <span class="basic-text">Сливочное мороженое с малиновым джемом</span>
+            <span class="product-card-price">310 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+                Купить
+              </span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Фисташка</h3>
+            </a>
+            <span class="basic-text">Фисташковый пломбир с кусочками шоколада</span>
+            <span class="product-card-price">340 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+                Купить
+              </span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Черника</h3>
+            </a>
+            <span class="basic-text">Крем-брюле с черничным джемом</span>
+            <span class="product-card-price">330 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Бабл-гам</h3>
+            </a>
+            <span class="basic-text">Ванильный пломбир со сладкой посыпкой</span>
+            <span class="product-card-price">320 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Ежевика</h3>
+            </a>
+            <span class="basic-text">Сливочное мороженое с ежевичным джемом</span>
+            <span class="product-card-price">330 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Банан</h3>
+            </a>
+            <span class="basic-text">Сливочный пломбир с банановым вкусом</span>
+            <span class="product-card-price">340 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Шоколадка</h3>
+            </a>
+            <span class="basic-text">Классический шоколадный пломбир</span>
+            <span class="product-card-price">270 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Клубничка</h3>
+            </a>
+            <span class="basic-text">Сливочный пломбир с клубничным вкусом</span>
+            <span class="product-card-price">300 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Лимон</h3>
+            </a>
+            <span class="basic-text">Освежающий лимонный сорбет</span>
+            <span class="product-card-price">310 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Ментол</h3>
+            </a>
+            <span class="basic-text">Сливочный пломбир с ментоловым сиропом</span>
+            <span class="product-card-price">320 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Орешек</h3>
+            </a>
+            <span class="basic-text">Фисташковый пломбир с шоколадным сиропом</span>
+            <span class="product-card-price">360 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
+          </li>
+          <li>
+            <a class="product-card-link" href="product.html">
+              <img class="product-card-image" src="" alt="">
+              <h3 class="product-card-title">Крем-брюле</h3>
+            </a>
+            <span class="basic-text">Классическое крем-брюле </span>
+            <span class="product-card-price">280 ₽/кг</span>
+            <a class="product-card-button button" href="#">
+              <span class="visually-hidden">
+              Купить</span>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
 
