--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
+        <a class="navigation-logo">
         <img class="logo" src="" alt="Логотип Gllacy Shop">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог</a>
