--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Каталог</a>
-            <ul class="navigation-list navigation-list-catalog">
+            <ul class="navigation-list-catalog">
               <li class="navigation-item">
                 <a class="navigation-link navigation-link-new" href="new.html">Новинки</a>
               </li>
