Заменяет класс у пункта меню Новинки

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="navigation-link" href="catalog.html">Каталог</a>
             <ul class="navigation-list-catalog">
               <li class="navigation-item">
-                <a class="navigation-link navigation-link-new" href="new.html">Новинки</a>
+                <a class="navigation-link navigation-link-main" href="new.html">Новинки</a>
               </li>
               <li class="navigation-item">
                 <a class="navigation-link" href="creamy.html">Сливочное</a>
