Убирает лишний пробел и добавляет ссылку для телефона

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
-          <li class="navigation-item ">
-            <a class="navigation-link navigation-telephone" href="#">+7 800 555-86-28</a>
+          <li class="navigation-item">
+            <a class="navigation-link navigation-telephone" href="tel:+78005558628">+7 800 555-86-28</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
