--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
             <a class="navigation-link navigation-telephone" href="tel:+78005558628">+7 800 555-86-28</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link" href="search.html">
               <span class="visually-hidden">
                 Поиск
               </span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Вход</a>
+            <a class="navigation-link" href="input.html">Вход</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-basket" href="#">
+            <a class="navigation-link navigation-basket" href="basket.html">
               <span class="visually-hidden">
                 Корзина
               </span>
