Добавляет общий заголовок главному слаедеру

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
     <main class="main-index">
       <h1 class="visually-hidden">Магазин мороженого Gllacy Shop</h1>
       <section class="main-gallery">
+        <h2 class="main-gallery-title">Галирея мороженого</h2>
         <ul class="slider">
           <li>
-            <h2 class="main-gallery-title">Нежный пломбир с клубничным джемом</h2>
+            <h3 class="main-gallery-title">Нежный пломбир с клубничным джемом</h3>
             <span class="basic-text">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</span>
             <button class="button" type="submit">Заказать</button>
           </li>
