Заменяет span на p

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <ul class="slider">
           <li>
             <h3 class="main-gallery-title">Нежный пломбир с клубничным джемом</h3>
-            <span class="basic-text">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</span>
+            <p class="basic-text">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
             <button class="button" type="submit">Заказать</button>
           </li>
           <li>
