--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <li>
             <h3 class="main-gallery-title">Нежный пломбир с клубничным джемом</h3>
             <p class="basic-text">Натуральное мороженое из свежих сливок и молока с вкуснейшим клубничным джемом – это идеальный десерт для всей семьи.</p>
-            <button class="button" type="submit">Заказать</button>
+            <a class="button" href="order.html">Заказать</a>
           </li>
           <li>
             <img class="slider-image" src="#" alt="Нежный пломбир с клубничным джемом">
