Заменяет span на strong

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <h3 class="product-card-title">Малинка</h3>
             </a>
             <p class="basic-text">Сливочное мороженое с малиновым джемом</p>
-            <span class="product-card-price">310 ₽/кг</span>
+            <strong class="product-card-price">310 ₽/кг</strong>
             <a class="product-card-button button" href="#">
               <span class="visually-hidden">Купить</span>
             </a>
@@ -167,7 +167,7 @@
               <h3 class="product-card-title">Фисташка</h3>
             </a>
             <p class="basic-text">Фисташковый пломбир с кусочками шоколада</p>
-            <span class="product-card-price">340 ₽/кг</span>
+            <strong class="product-card-price">340 ₽/кг</strong>
             <a class="product-card-button button" href="#">
               <span class="visually-hidden">Купить</span>
             </a>
@@ -178,7 +178,7 @@
               <h3 class="product-card-title">Черника</h3>
             </a>
             <p class="basic-text">Крем-брюле с черничным джемом</p>
-            <span class="product-card-price">330 ₽/кг</span>
+            <strong class="product-card-price">330 ₽/кг</strong>
             <a class="product-card-button button" href="#">
               <span class="visually-hidden">Купить</span>
             </a>
@@ -189,7 +189,7 @@
               <h3 class="product-card-title">Бабл-гам</h3>
             </a>
             <p class="basic-text">Ванильный пломбир со сладкой посыпкой</p>
-            <span class="product-card-price">320 ₽/кг</span>
+            <strong class="product-card-price">320 ₽/кг</strong>
             <a class="product-card-button button" href="#">
               <span class="visually-hidden">Купить</span>
             </a>
